// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile Results Dropdown Works 1`] = `
<div
  class="w-full px-4 pt-2 md:px-8 lg:px-16 xl:px-20"
>
  <vue-headful-stub
    description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
    head="[object Object]"
    title="Munro -  -  Results"
    url="https://munro-leagues.herokuapp.com/leagues//results/"
  />
   
  <h1
    class="font-bold text-left text-25xl md:text-3xl font-heading text-main-900"
  >
    <router-link-stub
      class="link text-main-700"
      to="/leagues/"
    >
      
      
    
    </router-link-stub>
     
    <span
      class="hidden ml-2 mr-3 md:inline-block"
    >
      -
    </span>
     
    <span
      class="block text-3xl md:inline-block"
    >
      
      
    </span>
  </h1>
   
  <filter-menu-stub
    class="mt-3 mb-6"
  />
   
  <div
    class="table-container"
    style=""
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="position"
          >
            <p>
              Pos.
            </p>
             
            <up-down-arrow-stub
              active="true"
            />
          </th>
           
          <th
            class="name"
          >
            <p>
              Name
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="ageClass"
          >
            <p>
              Class
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="club"
          >
            <p>
              Club
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="totalPoints"
          >
            <p>
              Points
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <td />
        </tr>
      </thead>
       
      <tbody
        name="fade"
      >
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            1
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Linda Reid
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                W35
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            W35
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            100
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <!---->
        <tr
          class="normal-table-row"
        >
          <td
            class="position"
          >
            2
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Harvey Blue
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M21
              </span>
               
              <span>
                INT
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M21
          </td>
           
          <td
            class="club"
          >
            INT
          </td>
           
          <td
            class="totalPoints"
          >
            99
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <!---->
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            3
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Bob Blu Jones
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M65
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M65
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            98
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <!---->
      </tbody>
    </table>
  </div>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Mobile Results Dropdown Works 2`] = `
<div
  class="w-full px-4 pt-2 md:px-8 lg:px-16 xl:px-20"
>
  <vue-headful-stub
    description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
    head="[object Object]"
    title="Munro -  -  Results"
    url="https://munro-leagues.herokuapp.com/leagues//results/"
  />
   
  <h1
    class="font-bold text-left text-25xl md:text-3xl font-heading text-main-900"
  >
    <router-link-stub
      class="link text-main-700"
      to="/leagues/"
    >
      
      
    
    </router-link-stub>
     
    <span
      class="hidden ml-2 mr-3 md:inline-block"
    >
      -
    </span>
     
    <span
      class="block text-3xl md:inline-block"
    >
      
      
    </span>
  </h1>
   
  <filter-menu-stub
    class="mt-3 mb-6"
  />
   
  <div
    class="table-container"
    style=""
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="position"
          >
            <p>
              Pos.
            </p>
             
            <up-down-arrow-stub
              active="true"
            />
          </th>
           
          <th
            class="name"
          >
            <p>
              Name
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="ageClass"
          >
            <p>
              Class
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="club"
          >
            <p>
              Club
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="totalPoints"
          >
            <p>
              Points
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <td />
        </tr>
      </thead>
       
      <tbody
        name="fade"
      >
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            1
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Linda Reid
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                W35
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            W35
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            100
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <!---->
        <tr
          class="normal-table-row"
        >
          <td
            class="position"
          >
            2
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Harvey Blue
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M21
              </span>
               
              <span>
                INT
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M21
          </td>
           
          <td
            class="club"
          >
            INT
          </td>
           
          <td
            class="totalPoints"
          >
            99
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700 rotate-180"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <tr
          class="mobile-table-expansion"
        >
          <td
            colspan="100%"
          >
            <p>
              
                200m:
                
              <span
                class="strikethrough"
              >
                
              </span>
            </p>
            <p>
              
                Longniddry:
                
              <span
                class=""
              >
                100
              </span>
            </p>
            <p>
              
                South Edinburgh:
                
              <span
                class="strikethrough"
              >
                5
              </span>
            </p>
          </td>
        </tr>
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            3
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Bob Blu Jones
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M65
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M65
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            98
          </td>
           
          <td
            class="arrow"
          >
            <svg
              class="transition-all duration-300 transform fill-current text-main-700"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
               
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </td>
        </tr>
         
        <!---->
      </tbody>
    </table>
  </div>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Renders Correctly + Fetches Data 1`] = `
<div
  class="w-full px-4 pt-2 md:px-8 lg:px-16 xl:px-20"
>
  <vue-headful-stub
    description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
    head="[object Object]"
    title="Munro -  -  Results"
    url="https://munro-leagues.herokuapp.com/leagues//results/"
  />
   
  <h1
    class="font-bold text-left text-25xl md:text-3xl font-heading text-main-900"
  >
    <router-link-stub
      class="link text-main-700"
      to="/leagues/"
    >
      
      
    
    </router-link-stub>
     
    <span
      class="hidden ml-2 mr-3 md:inline-block"
    >
      -
    </span>
     
    <span
      class="block text-3xl md:inline-block"
    >
      
      
    </span>
  </h1>
   
  <filter-menu-stub
    class="mt-3 mb-6"
  />
   
  <div
    class="table-container"
    style=""
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="position"
          >
            <p>
              Pos.
            </p>
             
            <up-down-arrow-stub
              active="true"
            />
          </th>
           
          <th
            class="name"
          >
            <p>
              Name
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="ageClass"
          >
            <p>
              Class
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="club"
          >
            <p>
              Club
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="totalPoints"
          >
            <p>
              Points
            </p>
             
            <up-down-arrow-stub />
          </th>
           
          <th
            class="relative points"
          >
            <p>
              1
            </p>
             
            <span>
              200m
            </span>
             
            <up-down-arrow-stub
              class="points-arrow"
            />
          </th>
          <th
            class="relative points"
          >
            <p>
              2
            </p>
             
            <span>
              Longniddry
            </span>
             
            <up-down-arrow-stub
              class="points-arrow"
            />
          </th>
          <th
            class="relative points"
          >
            <p>
              3
            </p>
             
            <span>
              South Edinburgh
            </span>
             
            <up-down-arrow-stub
              class="points-arrow"
            />
          </th>
        </tr>
      </thead>
       
      <tbody
        name="fade"
      >
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            1
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Linda Reid
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                W35
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            W35
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            100
          </td>
           
          <td
            class="points"
          >
            
                100
              
          </td>
          <td
            class="points strikethrough"
          >
            
                95
              
          </td>
          <td
            class="points strikethrough"
          >
            
                10
              
          </td>
        </tr>
         
        <!---->
        <tr
          class="normal-table-row"
        >
          <td
            class="position"
          >
            2
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Harvey Blue
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M21
              </span>
               
              <span>
                INT
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M21
          </td>
           
          <td
            class="club"
          >
            INT
          </td>
           
          <td
            class="totalPoints"
          >
            99
          </td>
           
          <td
            class="points strikethrough"
          >
            
                
              
          </td>
          <td
            class="points"
          >
            
                100
              
          </td>
          <td
            class="points strikethrough"
          >
            
                5
              
          </td>
        </tr>
         
        <!---->
        <tr
          class="normal-table-row striped"
        >
          <td
            class="position"
          >
            3
          </td>
           
          <td
            class="name"
          >
            <span
              class="block font-normal sm:font-light"
            >
              
                Bob Blu Jones
              
            </span>
             
            <span
              class="block text-xs sm:hidden"
            >
              <span
                class="mr-4"
              >
                M65
              </span>
               
              <span>
                ESOC
              </span>
            </span>
          </td>
           
          <td
            class="ageClass"
          >
            M65
          </td>
           
          <td
            class="club"
          >
            ESOC
          </td>
           
          <td
            class="totalPoints"
          >
            98
          </td>
           
          <td
            class="points strikethrough"
          >
            
                0
              
          </td>
          <td
            class="points"
          >
            
                100
              
          </td>
          <td
            class="points strikethrough"
          >
            
                98
              
          </td>
        </tr>
         
        <!---->
      </tbody>
    </table>
  </div>
   
  <!---->
   
  <div
    class="mx-1 my-6 card"
  >
    <h2
      class="text-2xl font-bold font-heading"
    >
      Results for Other Courses
    </h2>
     
    <div>
      <router-link-stub
        class="button"
        to="/leagues//results/Long"
      >
        Long
      </router-link-stub>
      <router-link-stub
        class="button"
        to="/leagues//results/Short"
      >
        Short
      </router-link-stub>
    </div>
  </div>
</div>
`;
